Restore 51单片机基础.md content

--- a/51单片机基础.md
+++ b/51单片机基础.md
@@ -18,9 +18,9 @@
 **XTAL1(19):内部振荡器的反相放大器的输入端，是外接晶体的一个引脚。当采用外部振荡器时，此引脚接地**  
 **XTAL2 (18)：内部振荡器的反相放大器的输出端，是外接晶体的另一端。当采用外部振 荡器时，此引脚接外部振荡源**  
 ### I/O接口
-**P0.0~P0.7(32~39)：使用时需要外接上拉电阻**  
-**P1.0~P1.7(1~8):作为输入使用前要先向该口进行写1操作**  
-**P2.0~P2.7(21~28:):在访问外部存储器时，输出高8位地址**   
+**P0.0-P0.7(32~39)：使用时需要外接上拉电阻**  
+**P1.0-P1.7(1~8):作为输入使用前要先向该口进行写1操作**  
+**P2.0-P2.7(21~28:):在访问外部存储器时，输出高8位地址**   
 **P3.0-P3.7(10-17)：P3口的每一个引脚均可独立定义为第一功能的输入/输出或第二功能，第一功能为普通I/O口**  
 ### 编程控制引脚
 
@@ -42,4 +42,5 @@
 **程序计数器PC：程序的字节地址计数器，存放将要执行的下一条指令的地址**  
 **指令寄存器IR，指令译码器ID：由PC指定地址取出来的指令经IR送至ID，由ID对指令译码产生控制信号，以执行指令所规定操作**  
 **振荡器和定时电路**  
+
 
